--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-leaflet": "^4.2.1",
+    "shpjs": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
