--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fs": "^0.0.1-security",
     "leaflet": "^1.9.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "react-select": "^5.8.0",
+    "react-slider": "^2.0.6",
     "shpjs": "^5.0.1"
   },
   "devDependencies": {
